# excel-playground

./: README.md  pyproject.toml
sheet/: spliter.py
